// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default Accordion > should close open content when an open item's heading is clicked again 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft jgXOTm"
    data-orientation="vertical"
    data-rc="Accordion"
  >
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rj:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:ri:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ri:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rj:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rl:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rk:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rk:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rl:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rn:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rm:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rm:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rn:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion > should close open content when another heading is clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft jgXOTm"
    data-orientation="vertical"
    data-rc="Accordion"
  >
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rd:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rc:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rc:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rd:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="open"
    >
      <h3
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:rf:"
          aria-expanded="true"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:re:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg
              fill="none"
              height="5"
              viewBox="0 0 18 5"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.666504 2.50016C0.666504 1.57969 1.4127 0.833496 2.33317 0.833496H15.6665C16.587 0.833496 17.3332 1.57969 17.3332 2.50016C17.3332 3.42063 16.587 4.16682 15.6665 4.16682H2.33317C1.4127 4.16682 0.666504 3.42063 0.666504 2.50016Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:re:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="open"
        id="radix-:rf:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        Content 2
      </div>
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rh:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rg:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rg:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rh:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft jgXOTm"
    data-orientation="vertical"
    data-rc="Accordion"
  >
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r1:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r0:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r1:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r3:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r2:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r2:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r3:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r5:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r4:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r4:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r5:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion > should show the correct dropdown content when a heading is clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft jgXOTm"
    data-orientation="vertical"
    data-rc="Accordion"
  >
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="open"
    >
      <h3
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:r7:"
          aria-expanded="true"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:r6:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg
              fill="none"
              height="5"
              viewBox="0 0 18 5"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.666504 2.50016C0.666504 1.57969 1.4127 0.833496 2.33317 0.833496H15.6665C16.587 0.833496 17.3332 1.57969 17.3332 2.50016C17.3332 3.42063 16.587 4.16682 15.6665 4.16682H2.33317C1.4127 4.16682 0.666504 3.42063 0.666504 2.50016Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r6:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="open"
        id="radix-:r7:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        Content 1
      </div>
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r9:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r8:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r8:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r9:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rb:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:ra:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ra:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rb:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion should close open content when an open item's heading is clicked again 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bSmHjB"
    data-rc="Accordion"
  >
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rj:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:ri:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ri:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rj:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rl:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rk:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rk:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rl:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rn:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rm:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rm:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rn:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion should close open content when another heading is clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bSmHjB"
    data-rc="Accordion"
  >
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rd:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rc:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rc:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rd:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="open"
    >
      <h3
        data-state="open"
      >
        <button
          aria-controls="radix-:rf:"
          aria-expanded="true"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:re:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg>
              minus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:re:"
        class="sc-hLBbgP lbVTL"
        data-state="open"
        id="radix-:rf:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        Content 2
      </div>
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rh:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rg:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rg:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rh:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bSmHjB"
    data-rc="Accordion"
  >
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:r1:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r0:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:r1:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:r3:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r2:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r2:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:r3:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:r5:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r4:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r4:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:r5:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default Accordion should show the correct dropdown content when a heading is clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bSmHjB"
    data-rc="Accordion"
  >
    <div
      class="sc-gswNZR eoZMGq"
      data-state="open"
    >
      <h3
        data-state="open"
      >
        <button
          aria-controls="radix-:r7:"
          aria-expanded="true"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:r6:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg>
              minus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r6:"
        class="sc-hLBbgP lbVTL"
        data-state="open"
        id="radix-:r7:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        Content 1
      </div>
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:r9:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r8:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r8:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:r9:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rb:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:ra:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ra:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rb:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Initially Open Accordion > should show the first item content on render 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft jgXOTm"
    data-orientation="vertical"
    data-rc="Accordion"
  >
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="open"
    >
      <h3
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:rp:"
          aria-expanded="true"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:ro:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg
              fill="none"
              height="5"
              viewBox="0 0 18 5"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0.666504 2.50016C0.666504 1.57969 1.4127 0.833496 2.33317 0.833496H15.6665C16.587 0.833496 17.3332 1.57969 17.3332 2.50016C17.3332 3.42063 16.587 4.16682 15.6665 4.16682H2.33317C1.4127 4.16682 0.666504 3.42063 0.666504 2.50016Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ro:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="open"
        id="radix-:rp:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        Content 1
      </div>
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rr:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rq:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rq:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rr:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gsnScm cPNjpf"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rt:"
          aria-expanded="false"
          class="sc-dkzCjb ckUIpA"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rs:"
          type="button"
        >
          <span
            class="sc-jSMdHm cKbnWi"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg
              fill="none"
              height="17"
              viewBox="0 0 18 17"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.3329 1.83317C7.3329 0.912697 8.07909 0.166504 8.99957 0.166504C9.92004 0.166504 10.6662 0.912696 10.6662 1.83317V15.1665C10.6662 16.087 9.92004 16.8332 8.99957 16.8332C8.07909 16.8332 7.3329 16.087 7.3329 15.1665V1.83317Z"
                fill="#F9C000"
              />
              <path
                d="M0.666504 8.49991C0.666504 7.57943 1.4127 6.83324 2.33317 6.83324H15.6665C16.587 6.83324 17.3332 7.57943 17.3332 8.49991C17.3332 9.42038 16.587 10.1666 15.6665 10.1666H2.33317C1.4127 10.1666 0.666504 9.42038 0.666504 8.49991Z"
                fill="#F9C000"
              />
            </svg>
          </span>
          <div
            class="sc-eCYdKt bhySlT"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rs:"
        class="sc-hKMtDE ktnKew"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:rt:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Initially Open Accordion should show the first item content on render 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bSmHjB"
    data-rc="Accordion"
  >
    <div
      class="sc-gswNZR eoZMGq"
      data-state="open"
    >
      <h3
        data-state="open"
      >
        <button
          aria-controls="radix-:rp:"
          aria-expanded="true"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:ro:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.MinusYellow"
          >
            <svg>
              minus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 1
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:ro:"
        class="sc-hLBbgP lbVTL"
        data-state="open"
        id="radix-:rp:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        Content 1
      </div>
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rr:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rq:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 2
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rq:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rr:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
    <div
      class="sc-gswNZR eoZMGq"
      data-state="closed"
    >
      <h3
        data-state="closed"
      >
        <button
          aria-controls="radix-:rt:"
          aria-expanded="false"
          class="sc-dkrFOg fYgpNG"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:rs:"
          type="button"
        >
          <span
            class="sc-jSUZER TGmAq"
            data-rc="LargeSystemIcon.PlusYellow"
          >
            <svg>
              plus-yellow.svg
            </svg>
          </span>
          <div
            class="sc-eDvSVe eErMbn"
          >
            Heading 3
          </div>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:rs:"
        class="sc-hLBbgP lbVTL"
        data-state="closed"
        hidden=""
        id="radix-:rt:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;
